adjust default path and strip suffixes
